--- a/assets/style.css
+++ b/assets/style.css
@@ -19,7 +19,7 @@ body {
     opacity: 0.7;
   }
   .person:hover {
-    border-color: #d31d1d;
+    border-color: #df3030;
   }
   .carousel-inner img {
     -webkit-filter: grayscale(90%);
@@ -39,7 +39,7 @@ body {
     background: #2d2d30;
     color: #bdbdbd;
   }
-  .bg-1 h3 {color: rgb(184, 50, 50);}
+  .bg-1 h3 {color: #df3030}
   .bg-1 p {font-style: italic;}
   .list-group-item:first-child {
     border-top-right-radius: 0;
@@ -109,16 +109,6 @@ body {
   }
   .navbar-default .navbar-toggle {
     border-color: transparent;
-  }
-  .open .dropdown-toggle {
-    color: rgb(0, 0, 0);
-    background-color: #555 !important;
-  }
-  .dropdown-menu li a {
-    color: #000 !important;
-  }
-  .dropdown-menu li a:hover {
-    background-color: red !important;
   }
   footer {
     background-color: #2d2d30;
