--- a/assets/style.css
+++ b/assets/style.css
@@ -14,13 +14,23 @@ body {
   .person {
     border: 10px solid transparent;
     margin-bottom: 25px;
-    width: 80%;
-    height: 80%;
-    opacity: 0.7;
+    width: 100%;
+    height: 400px;
+    opacity: 0.6;
   }
   .person:hover {
     border-color: #df3030;
   }
+  .carousel-item{
+    width: 100%; /*width you want*/
+    height: 500px; /*height you want*/
+    overflow: hidden;
+}
+.carousel-item img{
+    width: 100%;
+    height: 100%;
+    object-fit: fill;
+}
   .carousel-inner img {
     -webkit-filter: grayscale(90%);
     filter: grayscale(90%); /* make all photos black and white */ 
@@ -82,12 +92,6 @@ body {
   .nav-tabs li a {
     color: #777;
   }
-  #googleMap {
-    width: 100%;
-    height: 400px;
-    -webkit-filter: grayscale(100%);
-    filter: grayscale(100%);
-  }  
   .navbar {
     font-family: Montserrat, sans-serif;
     margin-bottom: 0;
@@ -128,4 +132,4 @@ body {
   textarea {
     resize: none;
   }
-  
+ 
