--- a/assets/style.css
+++ b/assets/style.css
@@ -90,12 +90,12 @@ body {
     padding: 40px 50px;
   }
   .nav-tabs li a {
-    color: #777;
+    color: #fff;
   }
   .navbar {
     font-family: Montserrat, sans-serif;
     margin-bottom: 0;
-    background-color: #2d2d30;
+    background-color: #1f1d1d;
     border: 0;
     font-size: 11px !important;
     letter-spacing: 4px;
