--- a/assets/style.css
+++ b/assets/style.css
@@ -45,29 +45,6 @@ body {
       display: none; /* Hide the carousel text when the screen is less than 600 pixels wide */
     }
   }
-  .bg-1 {
-    background: #2d2d30;
-    color: #bdbdbd;
-  }
-  .bg-1 h3 {color: #df3030}
-  .bg-1 p {font-style: italic;}
-  .list-group-item:first-child {
-    border-top-right-radius: 0;
-    border-top-left-radius: 0;
-  }
-  .list-group-item:last-child {
-    border-bottom-right-radius: 0;
-    border-bottom-left-radius: 0;
-  }
-  .thumbnail {
-    padding: 0 0 15px 0;
-    border: none;
-    border-radius: 0;
-  }
-  .thumbnail p {
-    margin-top: 15px;
-    color: #555;
-  }
   .btn {
     padding: 10px 20px;
     background-color: #333;
@@ -132,4 +109,13 @@ body {
   textarea {
     resize: none;
   }
+  .responsiveCal {
  
+    position: relative; padding-bottom: 75%; height: 0; overflow: hidden;
+     }
+     
+    .responsiveCal iframe {
+     
+    position: absolute; top:0; left: 0; width: 100%; height: 100%;
+     
+    }
