--- a/assets/style.css
+++ b/assets/style.css
@@ -32,8 +32,7 @@ body {
     object-fit: fill;
 }
   .carousel-inner img {
-    -webkit-filter: grayscale(90%);
-    filter: grayscale(90%); /* make all photos black and white */ 
+
     width: 100%; /* Set width to 100% */
     margin: auto;
   }
@@ -57,17 +56,8 @@ body {
     background-color: #fff;
     color: #000;
   }
-  .modal-header, h4, .close {
-    background-color: #333;
-    color: #fff !important;
-    text-align: center;
-    font-size: 30px;
-  }
-  .modal-header, .modal-body {
-    padding: 40px 50px;
-  }
   .nav-tabs li a {
-    color: #fff;
+    color: rgb(14, 14, 14);
   }
   .navbar {
     font-family: Montserrat, sans-serif;
@@ -95,12 +85,13 @@ body {
     background-color: #2d2d30;
     color: #f5f5f5;
     padding: 32px;
+    
   }
   footer a {
     color: #f5f5f5;
   }
   footer a:hover {
-    color: #777;
+    color: rgb(214, 214, 214);
     text-decoration: none;
   }  
   .form-control {
@@ -111,7 +102,7 @@ body {
   }
   .responsiveCal {
  
-    position: relative; padding-bottom: 75%; height: 0; overflow: hidden;
+    position: relative; padding-bottom: 100%; height: 0; overflow: hidden;
      }
      
     .responsiveCal iframe {
